# matrixmail

./: Cargo.toml  README.md  mail
src/: main.rs
