[package]
name = "matrixmail"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "mail"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["std", "derive", "error-context"] }
libc = "0.2.154"
matrix-sdk = { version = "0.7.1", default-features = false, features = ["e2e-encryption", "rustls-tls", "sqlite"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
termios = "0.3.3"
tokio = { version = "1.37.0", features = ["io-std", "io-util", "macros", "fs", "rt", "sync"] }
#tracing-subscriber = "0.3.18"
url = "2.5.0"

[profile.release]
lto = true
strip = true
